[package]
name = "zero-packet"
version = "1.0.0"
authors = ["Jannis Schoepplenberg <jschoe@proton.me>"]
description = "Zero-allocation, zero-copy, zero-dependency, zero-unsafe network packet library in Rust."
edition = "2021"
rust-version = "1.75"

[dev-dependencies]
allocation-counter = "0.8.1"
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
