[package]
name = "zero-packet"
version = "0.0.9"
authors = ["Jannis Schoepplenberg <jschoe@proton.me>"]
description = "A zero-copy Rust library that builds and parses network packets in-place."
keywords = ["networking", "packets", "protocols", "tcp", "ethernet"]
categories = ["network-programming", "parser-implementations", "parsing", "no-std", "no-std::no-alloc"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/J-Schoepplenberg/zero-packet"
edition = "2021"
rust-version = "1.75"

[dev-dependencies]
allocation-counter = "0.8.1"
criterion = "0.5.1"
